# hpp-geometry

./: CMakeLists.txt  NEWS  README  deps.cmake
doc/: Doxyfile.extra.in  footer.html  main.hh
include/hpp/geometry/collision/: capsule.hh  detector-box-capsule.hh  detector-capsule-box.hh  detector-capsule-capsule.hh  detector-capsule-obb.hh  detector-capsule-segment.hh  detector-capsule-triangle.hh  detector-obb-capsule.hh  detector-obb-segment.hh  detector-segment-capsule.hh  detector-segment-obb.hh  detector-segment-segment.hh  detector-segment-triangle.hh  detector-triangle-capsule.hh  detector-triangle-segment.hh  fwd.hh  poly-capsule.hh  poly-segment.hh  segment.hh  test-tree-capsule.hh  test-tree-segment.hh  util.hh
include/hpp/geometry/component/: capsule.hh  fwd.hh  segment.hh  util.hh
include/kcd/: capsule.hh  detector-capsule-capsule.hh  detector-capsule-obb.hh  detector-capsule-triangle.hh  detector-obb-capsule.hh  detector-obb-segment.hh  detector-segment-obb.hh  detector-segment-segment.hh  detector-segment-triangle.hh  detector-triangle-capsule.hh  detector-triangle-segment.hh  fwd.hh  poly-capsule.hh  poly-segment.hh  segment.hh  test-tree-capsule.hh  test-tree-segment.hh  util.hh
include/kcd-capsule/: fwd.hh  kcd-capsule.hh
include/kpp/: util.hh
include/kpp/component/: capsule.hh  fwd.hh  util.hh
src/: CMakeLists.txt  capsule.cc  detector-capsule-capsule.cc  kcd-capsule.cc  poly-capsule.cc  test-tree-capsule.cc
src/collision/: capsule.cc  detector-box-capsule.cc  detector-capsule-box.cc  detector-capsule-capsule.cc  detector-capsule-obb.cc  detector-capsule-segment.cc  detector-capsule-triangle.cc  detector-obb-capsule.cc  detector-obb-segment.cc  detector-segment-capsule.cc  detector-segment-obb.cc  detector-segment-segment.cc  detector-segment-triangle.cc  detector-triangle-capsule.cc  detector-triangle-segment.cc  poly-capsule.cc  poly-segment.cc  segment.cc  test-tree-capsule.cc  test-tree-segment.cc  util.cc
src/component/: capsule.cc  segment.cc  util.cc
src/kcd/: capsule.cc  detector-capsule-capsule.cc  detector-capsule-obb.cc  detector-capsule-triangle.cc  detector-obb-capsule.cc  detector-obb-segment.cc  detector-segment-obb.cc  detector-segment-segment.cc  detector-segment-triangle.cc  detector-triangle-capsule.cc  detector-triangle-segment.cc  poly-capsule.cc  poly-segment.cc  segment.cc  test-tree-capsule.cc  test-tree-segment.cc  util.cc
src/kpp/: util.cc
src/kpp/component/: capsule.cc  util.cc
tests/: CMakeLists.txt  bounding-capsule.cc  collision-detection-capsule-assembly.cc  collision-detection-capsule-obb.cc  collision-detection-capsule-segment.cc  collision-detection-capsule.cc  collision-detection-segment-obb.cc  collision-detection.cc  component-capsule-collision.cc  component-capsule.cc  component-segment-proximity-query.cc  component-segment.cc  gradient-segment-obb.cc  proximity-query-capsule-obb.cc  proximity-query-capsule-segment.cc  proximity-query-capsule.cc  proximity-query-segment-obb.cc  proximity-query-segment.cc  proximity-query.cc  segment-obb-proximity-query-performance.cc  segment-proximity-query-performance.cc  simple.cc
